@@ -84,6 +84,7 @@ th {
 #get-all-frame-id,
 #frame-id-list,
 #focus-frame,
+#focus-designated-frame,
 #show-previous-results,
 #set-all-style,
 #reset-all-style {
