@@ -85,6 +85,7 @@
       <dt><label for="frame-designation-expression">Frame</label></dt>
       <dd><input type="text" id="frame-designation-expression"></dd>
     </dl>
+    <div><button id="focus-designated-frame">Focus frame</button></div>
   </div>
 </div>
 <div>
